--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MPE-HW2</string>
+    <string name="order_confirmation">MPE-HW2</string>
+    <string name="ok">Labi</string>
 </resources>
